argocd/manifests/ingress/app/ingress.yaml
# manifests/ingress/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: app
    
spec:
  rules:
    - http:
        paths:
          - path: /api/content
            pathType: Prefix
            backend:
              service:
                name: mindscape-service
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: mindscape-auth
                port:
                  number: 80
          - path: /api/test
            pathType: Prefix
            backend:
              service:
                name: mindscape-info
                port:
                  number: 80
